solve 0118-pascals-triangle